--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:14:49.970081Z",
-     "start_time": "2024-07-29T20:14:49.115037Z"
+     "end_time": "2024-07-29T20:32:33.654058Z",
+     "start_time": "2024-07-29T20:32:32.629159Z"
     }
    },
    "cell_type": "code",
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:14:50.196684Z",
-     "start_time": "2024-07-29T20:14:49.973076Z"
+     "end_time": "2024-07-29T20:32:33.883602Z",
+     "start_time": "2024-07-29T20:32:33.656057Z"
     }
    },
    "cell_type": "code",
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:14:50.211092Z",
-     "start_time": "2024-07-29T20:14:50.197685Z"
+     "end_time": "2024-07-29T20:32:33.896918Z",
+     "start_time": "2024-07-29T20:32:33.885604Z"
     }
    },
    "cell_type": "code",
@@ -129,8 +129,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:14:50.247488Z",
-     "start_time": "2024-07-29T20:14:50.215089Z"
+     "end_time": "2024-07-29T20:32:33.938961Z",
+     "start_time": "2024-07-29T20:32:33.899915Z"
     }
    },
    "cell_type": "code",
@@ -151,6 +151,18 @@
     "    def backward(self, outputs_prime: np.ndarray) -> np.ndarray:\n",
     "        self.outputs_prime = outputs_prime.copy()\n",
     "        return self.activation_function_prime(self.outputs_prime)\n",
+    "\n",
+    "    def loss_backward(self, outputs_prime, y_true):\n",
+    "        samples = len(outputs_prime)\n",
+    "        \n",
+    "        if len(y_true.shape) == 2:\n",
+    "            y_true = np.argmax(y_true, axis=1)\n",
+    "            \n",
+    "        self.inputs_prime = outputs_prime.copy()\n",
+    "        self.inputs_prime[range(samples), y_true] -= 1\n",
+    "        self.inputs_prime /= samples\n",
+    "        \n",
+    "        return self.inputs_prime\n",
     "\n",
     "\n",
     "class ActivationReLU(ActivationLayer):\n",
@@ -190,7 +202,7 @@
     "                jacobian_matrix = np.diagflat(single_output) - np.dot(single_output, single_output.T)\n",
     "\n",
     "                self.inputs_prime[index] = np.dot(jacobian_matrix, single_output_prime)\n",
-    "                \n",
+    "\n",
     "            return self.inputs_prime\n",
     "\n",
     "        super().__init__(activation_function, activation_function_prime)"
@@ -202,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:14:50.257562Z",
-     "start_time": "2024-07-29T20:14:50.249488Z"
+     "end_time": "2024-07-29T20:32:33.950281Z",
+     "start_time": "2024-07-29T20:32:33.940958Z"
     }
    },
    "cell_type": "code",
@@ -258,8 +270,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:14:50.274116Z",
-     "start_time": "2024-07-29T20:14:50.260558Z"
+     "end_time": "2024-07-29T20:32:33.970937Z",
+     "start_time": "2024-07-29T20:32:33.952280Z"
     }
    },
    "cell_type": "code",
@@ -303,8 +315,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:23:43.105827Z",
-     "start_time": "2024-07-29T20:23:43.077605Z"
+     "end_time": "2024-07-29T20:32:33.988521Z",
+     "start_time": "2024-07-29T20:32:33.972938Z"
     }
    },
    "cell_type": "code",
@@ -336,20 +348,63 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-29T20:14:50.297809Z",
-     "start_time": "2024-07-29T20:14:50.294268Z"
+     "end_time": "2024-07-29T20:32:33.997647Z",
+     "start_time": "2024-07-29T20:32:33.989521Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "softmax_inputs_prime = softmax.loss_backward(softmax_outputs, y)\n",
+    "dense2_inputs_prime = dense2.backward(softmax_inputs_prime)\n",
+    "relu_inputs_prime = relu.backward(dense2_inputs_prime)\n",
+    "dense1_inputs_prime = dense1.backward(relu_inputs_prime)\n",
+    "\n",
+    "print(dense1.weights_prime)\n",
+    "print(dense1.biases_prime)\n",
+    "print(dense2.weights_prime)\n",
+    "print(dense2.biases_prime)"
+   ],
+   "id": "be612ccc81ef5754",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.5766357e-04  7.8368583e-05  4.7324400e-05]\n",
+      " [ 1.8161038e-04  1.1045573e-05 -3.3096312e-05]]\n",
+      "[[-3.60553473e-04  9.66117223e-05 -1.03671395e-04]]\n",
+      "[[ 5.44109462e-05  1.07411419e-04 -1.61822361e-04]\n",
+      " [-4.07913431e-05 -7.16780924e-05  1.12469446e-04]\n",
+      " [-5.30112993e-05  8.58172934e-05 -3.28059905e-05]]\n",
+      "[[-1.0729185e-05 -9.4610732e-06  2.0027859e-05]]\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Optimizers",
+   "id": "59af597caced2024"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-29T20:32:34.003931Z",
+     "start_time": "2024-07-29T20:32:33.999645Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "be612ccc81ef5754",
+   "id": "382d228ff2d24587",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 8
   }
  ],
  "metadata": {
